Added prod branch

--- a/GitLab-Prod/public/index.html
+++ b/GitLab-Prod/public/index.html
@@ -7,13 +7,14 @@
 </head>
 
 <body>
-    <h1>Prod</h1>
+    <h1>Prod branch</h1>
     <p>Hi there, click me.</p>
     <!-- Add a button -->
     <button id="myButton">Click Me</button>
 
     <!-- Link to the JavaScript file -->
     <script src="js/scripts.js"></script>
+    <p>version 1.0 test</p>
 </body>
 
 </html>
